1. update latest news  2.cultural alignment ui & fix bug

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -242,7 +242,10 @@
         }
 
         &.is-hovering {
+          background-color: #E6E6E6 !important;
+        }
 
+        &.is-selected {
           background-color: rgba(204, 240, 252, 1) !important;
         }
 
